--- a/registry/ralph-loop/content/overview.mdx
+++ b/registry/ralph-loop/content/overview.mdx
@@ -1,9 +1,13 @@
-**Why teams use it**
+<TweetEmbed url="https://x.com/i_am_brennan/status/2008554594029240467" />
+
+### Why teams use it
+
 - Keeps long tasks moving without re-prompting every step.
 - Reduces drift by capping iterations and forcing explicit completion.
 - Creates a durable progress log for handoffs.
 
-**What ships with it**
+### What ships with it
+
 - An OpenCode agent, command, and plugin that run the loop.
 - Prompt file updates for progress, verification, and next steps.
 - Built-in completion token and a manual stop control.
