Refine registry docs and web research tool

--- a/registry/nextjs-mcp/content/notes.mdx
+++ b/registry/nextjs-mcp/content/notes.mdx
@@ -1,1 +1,1 @@
-Requires Next.js 16 or newer. The MCP endpoint only appears while the dev server is running.
+Requires Next.js 16+ and a running dev server; restart OpenCode after installing so MCP tools load.
