--- a/registry/webresearch/content/notes.mdx
+++ b/registry/webresearch/content/notes.mdx
@@ -1,1 +1,1 @@
-Web research is permission-gated and requires the codex CLI on your PATH. Some sites block automated fetches; if a source is blocked, use a browser or a dedicated MCP fetch server.
+Requires the `codex` CLI with `web_search_request` enabled and network access; results are untrusted until you verify sources. If you already have Codex access (for example Plus or Pro), this is effectively free to run.
